move ksyscalls.json to kernel/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,7 +88,7 @@ add_library(mos_kernel.elf STATIC
     lib/string.c
 )
 
-generate_syscall_headers(mos_kernel.elf ${CMAKE_SOURCE_DIR}/assets/ksyscalls.json ksyscall mos/)
+generate_syscall_headers(mos_kernel.elf ${CMAKE_SOURCE_DIR}/kernel/ksyscalls.json ksyscall mos/)
 
 add_library(mos::elf_kernel ALIAS mos_kernel.elf)
 target_link_libraries(mos_kernel.elf PUBLIC gcc)
