--- a/userspace/CMakeLists.txt
+++ b/userspace/CMakeLists.txt
@@ -2,14 +2,18 @@
 
 mos_add_summary_section(USERSPACE "Userspace Programs")
 
-add_library(mos_libuserspace INTERFACE)
+add_library(mos_libuserspace OBJECT crt0.c)
 add_library(mos::libuserspace ALIAS mos_libuserspace)
 target_include_directories(mos_libuserspace
-    INTERFACE
+    PUBLIC
         ${CMAKE_SOURCE_DIR}/include
         ${CMAKE_BINARY_DIR}/include
         ${CMAKE_SOURCE_DIR}/arch/${MOS_ISA_FAMILY}/include
 )
+
+# TODO: Remove this once we have a proper userspace libc
+target_compile_options(mos_libuserspace PUBLIC "-ffreestanding")
+target_link_options(mos_libuserspace PUBLIC "-nostdlib")
 
 # build userspace programs after the kernel
 add_dependencies(mos_libuserspace mos::elf_kernel)
