--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
             "label": "compile",
             "type": "shell",
             "options": { "cwd": "${workspaceFolder}/build" },
-            "command": "cmake --build ${workspaceFolder}/build --target multiboot all mos_initrd",
+            "command": "cmake --build ${workspaceFolder}/build --target multiboot mos_initrd",
             "group": "build",
             "presentation": {
                 "reveal": "silent",
