--- a/userspace/CMakeLists.txt
+++ b/userspace/CMakeLists.txt
@@ -90,7 +90,11 @@ macro(add_initrd_item ITEM_TYPE PATH SOURCE_NAME)
 endmacro()
 
 add_userspace_program(init SOURCES init/main.c)
+add_userspace_program(kmsg-ping SOURCES ping-pong/ping.c)
+add_userspace_program(kmsg-pong SOURCES ping-pong/pong.c)
 
 add_initrd_item(TARGET /programs init)
+add_initrd_item(TARGET /programs kmsg-ping)
+add_initrd_item(TARGET /programs kmsg-pong)
 
 add_initrd_item(FILE /assets assets/msg.txt)
