build all userspace programs for codebrowser

--- a/.github/workflows/code-browser.yml
+++ b/.github/workflows/code-browser.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install packages
         run: |
           sudo apt update
-          sudo apt -y install nasm gcc-i686-linux-gnu g++-i686-linux-gnu ninja-build libclang-12-dev libclang-11-dev libclang-10-dev
+          sudo apt -y install nasm cpio gcc-i686-linux-gnu g++-i686-linux-gnu ninja-build libclang-12-dev libclang-11-dev libclang-10-dev
 
       - name: Configure CMake
         run: |
@@ -30,7 +30,7 @@ jobs:
         run: |
           cd ${{github.workspace}}/build
           ninja
-          ninja ${{matrix.target}}
+          ninja multiboot mos_initrd
 
       - name: Build CodeBrowser
         run: |
