syscall: fork() WIP 3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,8 @@ mos_add_kconfig_define(MOS_MM_LIBALLOC_DEBUG)
 mos_add_kconfig_define(MOS_DEBUG)
 mos_add_kconfig_define(MOS_PRINTK_HAS_FILENAME)
 mos_add_kconfig_define(MOS_MAX_CPU_COUNT)
+mos_add_kconfig_define(MOS_USERSPACE_PGALLOC_START)
+mos_add_kconfig_define(MOS_THREAD_STACK_SIZE)
 mos_add_kconfig_define(MOS_PROCESS_MAX_OPEN_FILES)
 mos_add_kconfig_define(MOS_PROCESS_MAX_THREADS)
 mos_add_kconfig_define(MOS_MEME)
