memory CoW: WIP 1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,7 +72,7 @@ add_library(mos_kernel.elf STATIC
     kernel/io/io.c
     kernel/kernel_init.c
     kernel/mm/liballoc.c
-    kernel/mm/paging.c
+    kernel/mm/cow.c
     kernel/panic.c
     kernel/printk.c
     kernel/stack_protector.c
