--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,10 +48,12 @@ mos_add_kconfig_define(MOS_DEBUG)
 mos_add_kconfig_define(MOS_PRINTK_HAS_FILENAME)
 mos_add_kconfig_define(MOS_MAX_CPU_COUNT)
 mos_add_kconfig_define(MOS_USERSPACE_PGALLOC_START)
-mos_add_kconfig_define(MOS_THREAD_STACK_SIZE)
 mos_add_kconfig_define(MOS_PROCESS_MAX_OPEN_FILES)
 mos_add_kconfig_define(MOS_PROCESS_MAX_THREADS)
-mos_add_kconfig_define(MOS_SYSCALL_STACK_PAGE_SIZE)
+
+mos_add_kconfig_define(MOS_STACK_PAGES_USER)
+mos_add_kconfig_define(MOS_STACK_PAGES_KERNEL)
+
 mos_add_kconfig_define(MOS_MEME)
 mos_add_kconfig_define(MOS_PATH_MAX_LENGTH)
 
@@ -77,6 +79,7 @@ add_library(mos_kernel.elf STATIC
     kernel/panic.c
     kernel/printk.c
     kernel/stack_protector.c
+    kernel/tasks/fork.c
     kernel/tasks/process.c
     kernel/tasks/task_io.c
     kernel/tasks/thread.c
