--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -42,10 +42,12 @@
                 "qemu-system-i386",
                 "-m",
                 "4G",
-                "-smp",
-                "1",
                 "-display",
                 "gtk,show-tabs=on",
+                "-d",
+                "int,cpu_reset,guest_errors",
+                "-D",
+                "qemu_err.log",
                 "-kernel",
                 "${workspaceFolder}/build/mos_multiboot.bin",
                 "-s",
