--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,13 +34,13 @@ endif()
 include(generate_syscall_headers)
 
 add_library(mos_kernel_basic_include INTERFACE)
-add_library(mos_kernel_arch_specific_include INTERFACE)
+add_library(mos_kernel_platform_include INTERFACE)
 
-target_include_directories(mos_kernel_basic_include INTERFACE ${CMAKE_SOURCE_DIR}/kernel/include ${CMAKE_BINARY_DIR}/include)
-target_include_directories(mos_kernel_arch_specific_include INTERFACE ${CMAKE_SOURCE_DIR}/arch/${MOS_ISA_FAMILY}/include)
+target_include_directories(mos_kernel_basic_include INTERFACE ${CMAKE_SOURCE_DIR}/kernel/include ${CMAKE_BINARY_DIR}/include ${CMAKE_SOURCE_DIR}/lib/include)
+target_include_directories(mos_kernel_platform_include INTERFACE ${CMAKE_SOURCE_DIR}/arch/${MOS_ISA_FAMILY}/include)
 
 add_library(mos::basic_include ALIAS mos_kernel_basic_include)
-add_library(mos::arch_specific_include ALIAS mos_kernel_arch_specific_include)
+add_library(mos::platform_include ALIAS mos_kernel_platform_include)
 
 set(MOS_STANDARD_LIBRARY_SOURCES
     lib/structures/hashmap.c
@@ -82,8 +82,7 @@ add_library(mos_kernel.elf STATIC
 
 generate_syscall_headers(mos_kernel.elf ${CMAKE_SOURCE_DIR}/kernel/ksyscalls.json ksyscall mos/)
 
-target_link_libraries(mos_kernel.elf PRIVATE gcc mos::basic_include mos::arch_specific_include)
-target_include_directories(mos_kernel.elf PRIVATE ${CMAKE_SOURCE_DIR}/lib/include)
+target_link_libraries(mos_kernel.elf PRIVATE gcc mos::basic_include mos::platform_include)
 target_compile_definitions(mos_kernel.elf PRIVATE -D__MOS_KERNEL__)
 target_compile_options(mos_kernel.elf PUBLIC "-ffreestanding")
 
@@ -96,8 +95,7 @@ include(add_bootable_target)
 include(${MOS_ARCH_CONFIG})
 
 add_library(mos_userspace_stdlib STATIC ${MOS_STANDARD_LIBRARY_SOURCES})
-target_include_directories(mos_userspace_stdlib PUBLIC ${CMAKE_SOURCE_DIR}/lib/include)
-target_link_libraries(mos_userspace_stdlib PUBLIC gcc mos::basic_include mos::arch_specific_include)
+target_link_libraries(mos_userspace_stdlib PUBLIC gcc mos::basic_include mos::platform_include)
 add_library(mos::userspace_stdlib ALIAS mos_userspace_stdlib)
 
 add_library(mos_libuserspace OBJECT userspace/libuserspace.c)
