--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,10 +1,12 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 add_kernel_source(RELATIVE_SOURCES test_engine.c)
+target_include_directories(mos_kernel.elf PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 macro(mos_add_test TEST_NAME TEST_DESCRIPTION)
     set(TEST_TARGET mos_test_${TEST_NAME})
     add_library(${TEST_TARGET} OBJECT ${CMAKE_CURRENT_LIST_DIR}/${TEST_NAME}/test_${TEST_NAME}.c)
     target_compile_definitions(${TEST_TARGET} PRIVATE -D__MOS_KERNEL__)
+    target_include_directories(${TEST_TARGET} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
     target_link_libraries(${TEST_TARGET} PRIVATE mos::basic_include mos::platform_include)
 
     if (${TEST_NAME} IN_LIST MOS_DISABLED_TESTS)
