printk: use the console specified by cmdline "kmsg_console"

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -57,7 +57,9 @@
                 "-serial",
                 "chardev:serial_log",
                 "-initrd",
-                "${workspaceFolder}/build/initrd.cpio"
+                "${workspaceFolder}/build/initrd.cpio",
+                "-append",
+                "kmsg_console=x86"
             ],
             "problemMatcher": [ ],
             "group": "none",
