--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -27,3 +27,4 @@ mos_add_test(hashmap "hashmap test")
 mos_add_test(downwards_stack "downwards stack test")
 mos_add_test(fs_api "test fs api")
 mos_add_test(memops "test memery operations")
+mos_add_test(ring_buffer "test ring buffer")
