--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install packages
         run: |
           sudo apt update
-          sudo apt -y install nasm grub2-common mtools jq ninja-build qemu-system-x86 cpio libgmp-dev libmpfr-dev libmpc-dev
+          sudo apt -y install nasm grub2-common mtools jq ninja-build cpio libgmp-dev libmpfr-dev libmpc-dev
 
       - name: Download & Extract Cross Compiler
         run: |
