x86 multiboot: support initrd in ISO

--- a/arch/x86/boot/multiboot_iso/grub.cfg
+++ b/arch/x86/boot/multiboot_iso/grub.cfg
@@ -2,5 +2,6 @@ set timeout=5
 set default=0
 
 menuentry "MOS" {
-	multiboot /boot/mos-kernel arg1 arg2
+    multiboot /boot/mos-kernel
+    module /boot/initrd.cpio
 }
