--- a/.github/workflows/code-browser.yml
+++ b/.github/workflows/code-browser.yml
@@ -7,6 +7,11 @@ on:
       - "lab-tutorial/**"
   workflow_dispatch:
 
+# Allow one concurrent deployment
+concurrency:
+  group: "code-browser"
+  cancel-in-progress: true
+
 jobs:
   build:
     name: Generate CodeBrowser for MOS
