x86 APIC: add lapic_get_id()

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -58,6 +58,8 @@
                 "chardev:serial_log",
                 "-initrd",
                 "${workspaceFolder}/build/initrd.cpio",
+                "-smp",
+                "4",
                 "-append",
                 "kmsg_console=serial"
             ],
