--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ add_library(mos_kernel.elf STATIC
     kernel/kernel_init.c
     kernel/mm/cow.c
     kernel/mm/memops.c
+    kernel/mm/shm.c
     kernel/panic.c
     kernel/printk.c
     kernel/stack_protector.c
