--- a/.github/workflows/build-mos.yml
+++ b/.github/workflows/build-mos.yml
@@ -82,7 +82,7 @@ jobs:
           cd ${{github.workspace}}/build
           cp ${{env.BOOTABLE}} test-failure.bin
           cp initrd.cpio test-failure-initrd.cpio
-          ${{github.workspace}}/scripts/run_tests.sh
+          ${{github.workspace}}/scripts/run_tests.sh "mos_tests"
           tar -czf test-failure.tar.gz test-failure.*
 
       - name: Upload Test Result
