--- a/.github/workflows/code-browser.yml
+++ b/.github/workflows/code-browser.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install packages
         run: |
           sudo apt update
-          sudo apt remove clang-12 clang-13
+          sudo apt remove clang-12 clang-13 llvm-11-dev llvm-12-dev llvm-13-dev
           sudo apt -y install nasm cpio gcc-i686-linux-gnu g++-i686-linux-gnu ninja-build libclang-14-dev
 
       - name: Configure CMake
