--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,10 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
+
+if (BUILD_TESTING)
+    message(STATUS "MOS kernel unit tests are enabled")
+    message(STATUS "Specific unit tests can be disabled with -DMOS_TESTING_DISABLE_<test_name>=ON")
+endif()
+
 add_kernel_source(RELATIVE_SOURCES test_engine.c)
 target_include_directories(mos_kernel.elf PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
@@ -9,14 +15,16 @@ macro(mos_add_test TEST_NAME TEST_DESCRIPTION)
     target_include_directories(${TEST_TARGET} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
     target_link_libraries(${TEST_TARGET} PRIVATE mos::basic_include mos::platform_include)
 
-    if (${TEST_NAME} IN_LIST MOS_DISABLED_TESTS)
+    if (MOS_TESTING_DISABLE_${TEST_NAME})
         set(MOS_TEST_${TEST_NAME}_STATE "disabled")
+    elseif (NOT BUILD_TESTING)
+        set(MOS_TEST_${TEST_NAME}_STATE "disabled globally")
     else()
         set(MOS_TEST_${TEST_NAME}_STATE "enabled")
         target_link_libraries(mos_kernel.elf PRIVATE $<TARGET_OBJECTS:${TEST_TARGET}>)
     endif()
 
-    mos_add_summary_item(TESTS "${TEST_DESCRIPTION}" "${MOS_TEST_${TEST_NAME}_STATE}")
+    mos_add_summary_item(TESTS ${TEST_NAME} "${TEST_DESCRIPTION}" "${MOS_TEST_${TEST_NAME}_STATE}")
 endmacro()
 
 mos_add_test(printf "printf family")
