cmake: refactor mos_config a bit more

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -40,6 +40,7 @@ jobs:
           cmake \
             -DBUILD_TESTING=ON \
             -B ${{github.workspace}}/build \
+            -DMOS_ARCH=x86 \
             -G Ninja
 
       - name: Build
